<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:attr/dividerVertical"
        android:dividerPadding="@dimen/text_margin"
        android:orientation="vertical"
        android:showDividers="middle"
        tools:context=".ui.editmonster.EditMonsterFragment">

        <TextView
            android:id="@+id/basicInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_basic_info"
            app:drawableEndCompat="@drawable/ic_chevron_right_24" />

        <TextView
            android:id="@+id/armor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_armor"
            app:drawableEndCompat="@drawable/ic_chevron_right_24" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_speed"
            app:drawableEndCompat="@drawable/ic_chevron_right_24" />

        <TextView
            android:id="@+id/abilityScores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_ability_scores"
            app:drawableEndCompat="@drawable/ic_chevron_right_24" />

        <TextView
            android:id="@+id/savingThrows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_saving_throws"
            app:drawableEndCompat="@drawable/ic_chevron_right_24" />

        <TextView
            android:id="@+id/skills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_skills"
            app:drawableEndCompat="@drawable/ic_chevron_right_24" />

        <TextView
            android:id="@+id/conditionImmunities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_condition_immunities"
            app:drawableEndCompat="@drawable/ic_chevron_right_24" />

        <TextView
            android:id="@+id/damageImmunities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_damage_immunities"
            app:drawableEndCompat="@drawable/ic_chevron_right_24" />

        <TextView
            android:id="@+id/damageResistances"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_damage_resistances"
            app:drawableEndCompat="@drawable/ic_chevron_right_24" />

        <TextView
            android:id="@+id/damageVulnerabilities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_damage_vulnerabilities"
            app:drawableEndCompat="@drawable/ic_chevron_right_24" />

        <TextView
            android:id="@+id/senses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_senses"
            app:drawableEndCompat="@drawable/ic_chevron_right_24" />

        <TextView
            android:id="@+id/languages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_languages"
            app:drawableEndCompat="@drawable/ic_chevron_right_24" />

        <TextView
            android:id="@+id/challengeRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_challenge_rating"
            app:drawableEndCompat="@drawable/ic_chevron_right_24" />

        <TextView
            android:id="@+id/abilities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_abilities"
            app:drawableEndCompat="@drawable/ic_chevron_right_24" />

        <TextView
            android:id="@+id/actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_actions"
            app:drawableEndCompat="@drawable/ic_chevron_right_24" />

        <TextView
            android:id="@+id/reactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_reactions"
            app:drawableEndCompat="@drawable/ic_chevron_right_24" />

        <TextView
            android:id="@+id/legendaryActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_legendary_actions"
            app:drawableEndCompat="@drawable/ic_chevron_right_24" />

        <TextView
            android:id="@+id/lairActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_lair_actions"
            app:drawableEndCompat="@drawable/ic_chevron_right_24" />

        <TextView
            android:id="@+id/regionalActions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_regional_actions"
            app:drawableEndCompat="@drawable/ic_chevron_right_24" />

    </LinearLayout>
</ScrollView>
