<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_import_message"
        android:paddingBottom="8dp" />

    <EditText
        android:id="@+id/edit_text_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_import_url_hint"
        android:inputType="textUri"
        android:importantForAutofill="no"
        android:singleLine="true" />

    <Button
        android:id="@+id/button_import_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/action_import_from_url" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/button_import_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_import_monster_from_file" />

    <Button
        android:id="@+id/button_import_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/action_import_from_source" />

</LinearLayout>
