<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editmonster.EditBasicInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/label_name"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                tools:text="John Doe" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_size"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:text="big" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_type"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:text="fiend" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_subtype"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:text="any race" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/alignment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_alignment"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:text="Chaotic Stupid" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Hit Dice (int) -->
        <com.majinnaibu.monstercards.ui.components.Stepper
            android:id="@+id/hitDice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            app:label="@string/label_hit_dice"
            app:maxValue="99"
            app:minValue="1"
            app:stepAmount="1" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/hasCustomHitPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/label_has_custom_hp"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customHitPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_custom_hp"
                android:importantForAutofill="no"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>
